--- a/Visulization/vis.html
+++ b/Visulization/vis.html
@@ -16,15 +16,12 @@
 <script type="text/javascript" src="vis.js"></script>
 
 <script type="text/javascript">
-parameter = [];
-index = 1;
+parameter = ["Adecco"];
+index = 8;
 var dataProcessInstance = new dataProcess();
 var visInstance = new Visulization();
 var data = dataProcessInstance.getData(parameter, index);
 visInstance.runVisulize(data, index);
-
-
-
 </script>
 </body>
 </html>
