Add changes to dataProcess.js

--- a/Visulization/vis.html
+++ b/Visulization/vis.html
@@ -18,9 +18,9 @@
 <script type="text/javascript">
 var visInstance = new Visulization();
 visInstance.createWorldMap();
-
-parameter = ["Adecco"];
-index = 1;
+//setting query parameter and query:
+parameter = ["Manpower"];
+index = 2;
 visInstance.query(parameter, index);
 </script>
 </body>
