--- a/Visulization/vis.html
+++ b/Visulization/vis.html
@@ -1,11 +1,12 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css" />
+<link type="text/css" rel="stylesheet" href="lib/colorbrewer.css"/>
 <script type="text/javascript" src="lib/jquery.js"></script>
 <script type="text/javascript" src="lib/d3.v3.min.js"></script>
 <script type="text/javascript" src="dataProcess.js"></script>
-<script type="text/javascript" src="lib/topojson.v0.min.js"></script>
 <script type="text/javascript" src="vis.js"></script>
+<script type="text/javascript" src="lib/d3.geo.js"></script>
 
 </head>
 
