reform query representation mechanism

--- a/Visulization/vis.html
+++ b/Visulization/vis.html
@@ -20,8 +20,8 @@
 var visInstance = new Visulization();
 visInstance.createWorldMap();
 //setting query parameter and query:
-parameter = ["Manpower"];
-index = 2;
+parameter = ["company", "Adecco"];
+index = 1;
 visInstance.query(parameter, index);
 </script>
 </body>
